# milcon_data_scrub

./: README.md  pyproject.toml
.ipynb_checkpoints/: 01: Extract Dataset From Raw Sheets-checkpoint.ipynb  02: Analysis: Do OG Estimates Vary-checkpoint.ipynb
coded-projects-safe/: 2024.05.17-unique-contracts-coded copy.xlsx  2024.05.17-unique-contracts-coded-FINAL.xlsx  2024.05.17-unique-contracts-coded_BACKUP.xlsx
data/datasets/: dataset-for-overrun-analysis.csv  unique-contracts-coded.xlsx
data/raw_data/: MilCon Status Report - April, 2013 .xlsx  MilCon Status Report - April, 2014 .xlsx  MilCon Status Report - April, 2015.xlsx  MilCon Status Report - April, 2016.xlsx  MilCon Status Report - April, 2017.xlsx  MilCon Status Report - April, 2018.xlsx  MilCon Status Report - April, 2019.xlsx  MilCon Status Report - April, 2020.xlsx  MilCon Status Report - April, 2021.xlsx  MilCon Status Report - April, 2022.xlsx  MilCon Status Report - April, 2023.xlsx  MilCon Status Report - August, 2013.xlsx  MilCon Status Report - August, 2014 .xlsx  MilCon Status Report - August, 2015.xlsx  MilCon Status Report - August, 2016.xlsx  MilCon Status Report - August, 2017.xlsx  MilCon Status Report - August, 2018.xlsx  MilCon Status Report - August, 2020.xlsx  MilCon Status Report - August, 2021.xlsx  MilCon Status Report - August, 2022.xlsx  MilCon Status Report - December, 2013 .xlsx  MilCon Status Report - December, 2014 .xlsx  (+94 more)
notebooks/: 01: Extract Dataset From Raw Sheets.ipynb  02: Explore raw data structure.ipynb  03: Create dataset for analysis.ipynb  Untitled.ipynb
