[tool.poetry]
name = "milcon-data-scrub"
version = "0.1.0"
description = "Scrape, clean, analysise US milcon project data archive"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openpyxl = "3.1.0"
pandas = "^2.2.0"
numpy = "^1.26.4"
tqdm = "^4.66.2"
matplotlib = "^3.8.3"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
